@@ -2,18 +2,102 @@ plugins {
     id 'java'
 }
 
-group 'com.marketplace'
+group 'com.marketplace.eventstore.mongodb'
 version '1.0.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
+//
+sourceSets {
+
+    functional {
+        java.srcDir "$projectDir/src/functional/java"
+        resources.srcDir "$projectDir/src/functional/resources"
+        compileClasspath += sourceSets.main.output + sourceSets.test.output + configurations.testRuntime
+        runtimeClasspath += sourceSets.main.output + sourceSets.test.output + configurations.testRuntime
+    }
+}
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+
+    functionalTestCompile {
+        extendsFrom testCompile
+    }
+
+    functionalImplementation {
+        extendsFrom testImplementation
+    }
+    functionalRuntime {
+        extendsFrom testRuntime
+    }
+}
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    compile project(":common")
+//    compile project(":config")
+    compile project(":eventstore")
+
+//    implementation("org.mongodb:mongodb-driver-sync:4.1.1")
+    implementation 'org.mongodb:mongodb-driver-reactivestreams:1.13.1'
+
+//    implementation("javax.inject:javax.inject:1")
+    implementation("javax.persistence:javax.persistence-api:2.2")
+
+    compileOnly 'org.immutables:value:2.8.2'
+    implementation 'org.immutables:criteria-inmemory:2.8.2'
+    implementation 'org.immutables:criteria-mongo:2.8.2'
+    annotationProcessor 'org.immutables:value:2.8.2'
+
+    implementation("com.google.guava:guava:30.0-jre")
+
+    testImplementation(platform("org.junit:junit-bom:${junitVersion}"))
+    testImplementation('org.junit.jupiter:junit-jupiter')
+    testImplementation("org.assertj:assertj-core:${assertjVersion}")
+    testImplementation("org.mockito:mockito-core:${mockitoVersion}")
+    testImplementation("org.mockito:mockito-junit-jupiter:${mockitoVersion}")
+    testImplementation('io.projectreactor:reactor-test:3.4.0')
+
+    testCompile project(":common-test")
+    testCompile project(":config")
+    testImplementation("org.testcontainers:junit-jupiter:1.15.0")
+    testImplementation("org.testcontainers:mongodb:1.15.0")
 }
 
 test {
     useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+tasks.withType(JavaExec) {
+    jvmArgs += "--enable-preview"
+}
+//
+task functionalTest(type: Test) {
+    description 'Runs the functional tests.'
+    testClassesDirs = sourceSets.functional.output.classesDirs
+    classpath = sourceSets.functional.runtimeClasspath
+    group = 'verification'
+}
+//
+functionalTest {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
+//
+//check.dependsOn functionalTest
+//
+
